--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-webview": "^11.0.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
